--- a/apps/renderer/src/app/app.component.html
+++ b/apps/renderer/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<app-nx-welcome>
+</app-nx-welcome>
+<router-outlet>
+</router-outlet>
+soemthing changes here
