Testing IPC between RENDER & electron
Got fucked here, nx-electron is not just an electron
it has it's own customizations, not following the
defaults and tweaking the location of the preload scripts got me fucked.

--- a/apps/renderer/src/app/app.component.html
+++ b/apps/renderer/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-nx-welcome>
-</app-nx-welcome>
+<!-- <app-nx-welcome>
+</app-nx-welcome> -->
 <router-outlet>
 </router-outlet>
+
 soemthing changes here
+Success of USER LOG IN IS {{isUserLoginSuccess}}
