buggy login process

--- a/apps/renderer/src/app/app.component.html
+++ b/apps/renderer/src/app/app.component.html
@@ -2,6 +2,4 @@
 </app-nx-welcome> -->
 <router-outlet>
 </router-outlet>
-
-soemthing changes here
-Success of USER LOG IN IS {{isUserLoginSuccess}}
+<app-login></app-login>
